Define swagger and generate HTTP handlers
