# api/openapi/restapi/op/update_user_responses.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package op
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/hellohq/hqservice/api/openapi/model"
+)
+
+// UpdateUserOKCode is the HTTP code returned for type UpdateUserOK
+const UpdateUserOKCode int = 200
+
+/*
+UpdateUserOK Create a user successfully.
+
+swagger:response updateUserOK
+*/
+type UpdateUserOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *model.LinkTokenCreateResp `json:"body,omitempty"`
+}
+
+// NewUpdateUserOK creates UpdateUserOK with default headers values
+func NewUpdateUserOK() *UpdateUserOK {
+
+	return &UpdateUserOK{}
+}
+
+// WithPayload adds the payload to the update user o k response
+func (o *UpdateUserOK) WithPayload(payload *model.LinkTokenCreateResp) *UpdateUserOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user o k response
+func (o *UpdateUserOK) SetPayload(payload *model.LinkTokenCreateResp) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+UpdateUserDefault General errors using same model as used by go-swagger for validation errors.
+
+swagger:response updateUserDefault
+*/
+type UpdateUserDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *model.Error `json:"body,omitempty"`
+}
+
+// NewUpdateUserDefault creates UpdateUserDefault with default headers values
+func NewUpdateUserDefault(code int) *UpdateUserDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &UpdateUserDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the update user default response
+func (o *UpdateUserDefault) WithStatusCode(code int) *UpdateUserDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the update user default response
+func (o *UpdateUserDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the update user default response
+func (o *UpdateUserDefault) WithPayload(payload *model.Error) *UpdateUserDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user default response
+func (o *UpdateUserDefault) SetPayload(payload *model.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
